WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223748
Address some alignment issues found by UBSan in contentextensions code
https://bugs.webkit.org/show_bug.cgi?id=223748
Summary
Address some alignment issues found by UBSan in contentextensions code
Chris Dumez
Reported
2021-03-25 09:03:12 PDT
Address some alignment issues found by UBSan in contentextensions code: - contentextensions/SerializedNFA.h:55:20: runtime error: reference binding to misaligned address 0xnnnnnnnnn for type 'const unsigned long long', which requires 8 byte alignment - contentextensions/NFAToDFA.cpp:254:29: runtime error: reference binding to misaligned address 0xnnnnnnnnn for type 'const unsigned long long', which requires 8 byte alignment - contentextensions/DFABytecodeCompiler.cpp:43:5: runtime error: store to misaligned address 0xnnnnnnnnn for type 'unsigned short', which requires 2 byte alignment
Attachments
Patch
(7.94 KB, patch)
2021-03-25 09:18 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-03-25 09:18:24 PDT
Created
attachment 424252
[details]
Patch
EWS
Comment 2
2021-03-25 11:28:37 PDT
commit-queue failed to commit
attachment 424252
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 3
2021-03-25 11:47:22 PDT
Committed
r275049
: <
https://commits.webkit.org/r275049
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424252
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-03-25 11:48:16 PDT
<
rdar://problem/75846255
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug