Source/WebCore/contentextensions/NFAToDFA.cpp
@@ -59,10 +59,10 @@ static inline void epsilonClosureExcludingSelf(const SerializedNFA& nfa, unsigne
 
     do {
         unsigned unprocessedNodeId = unprocessedNodes.takeLast();
-        const auto& node = nfa.nodes()[unprocessedNodeId];
+        const auto* node = nfa.nodes().pointerAt(unprocessedNodeId);
 
-        for (uint32_t epsilonTargetIndex = node.epsilonTransitionTargetsStart; epsilonTargetIndex < node.epsilonTransitionTargetsEnd; ++epsilonTargetIndex) {
-            uint32_t targetNodeId = nfa.epsilonTransitionsTargets()[epsilonTargetIndex];
+        for (uint32_t epsilonTargetIndex = node->epsilonTransitionTargetsStart; epsilonTargetIndex < node->epsilonTransitionTargetsEnd; ++epsilonTargetIndex) {
+            uint32_t targetNodeId = nfa.epsilonTransitionsTargets().valueAt(epsilonTargetIndex);
             auto addResult = closure.add(targetNodeId);
             if (addResult.isNewEntry) {
                 unprocessedNodes.append(targetNodeId);
@@ -249,9 +249,9 @@ struct NodeIdSetToUniqueNodeIdSetTranslator {
         HashSet<uint64_t, DefaultHash<uint64_t>, WTF::UnsignedWithZeroKeyHashTraits<uint64_t>> actions;
 
         for (unsigned nfaNodeId : source.nodeIdSet) {
-            const auto& nfaNode = source.nfa.nodes()[nfaNodeId];
-            for (unsigned actionIndex = nfaNode.actionStart; actionIndex < nfaNode.actionEnd; ++actionIndex)
-                actions.add(source.nfa.actions()[actionIndex]);
+            const auto* nfaNode = source.nfa.nodes().pointerAt(nfaNodeId);
+            for (unsigned actionIndex = nfaNode->actionStart; actionIndex < nfaNode->actionEnd; ++actionIndex)
+                actions.add(source.nfa.actions().valueAt(actionIndex));
         }
 
         unsigned actionsStart = source.dfa.actions.size();
